--- a/CoordinatorLayoutEx/app/src/main/res/values/strings.xml
+++ b/CoordinatorLayoutEx/app/src/main/res/values/strings.xml
@@ -1,3 +1,18 @@
 <resources>
-    <string name="app_name">CoordinatorLayoutEx</string>
+    <string name="app_name">ggikko</string>
+    <string name="hello_world">Hello world!</string>
+    <string name="action_settings">Settings</string>
+    <string name="hello">Sample Android Design Support Library App</string>
+
+    <string name="floating_labels">Floating Labels</string>
+    <string name="fab">Floating Action Button</string>
+    <string name="snackbar">Snackbar</string>
+    <string name="tabs">Tabs</string>
+    <string name="coordinator">Coordinator Layout</string>
+    <string name="home">홈으로</string>
+    <string name="me">나</string>
+    <string name="friends">친구</string>
+    <string name="myteam">팀</string>
+    <string name="contest">대회</string>
+    <string name="settings">환경설정</string>
 </resources>
